conf/k8s/base/backend-api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-api-pod
  labels:
    app.kubernetes.io/component: backend-api
  annotations:
    prometheus.io/scrape: "true"
spec:
  serviceAccountName: default-service-account
  containers:
  - name: backend-api
    image: paritytech/substrate-playground-backend-api
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "256Mi"
        cpu: "250m"
      limits:
        memory: "512Mi"
        cpu: "500m"
