conf/k8s/base/backend-ui-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-ui-pod
  labels:
    app.kubernetes.io/component: backend-ui
spec:
  containers:
  - name: playground
    image: paritytech/substrate-playground-backend-ui
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "128Mi"
        cpu: "125m"
      limits:
        memory: "512Mi"
        cpu: "250m"
