conf/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  selector:
    matchLabels:
      app: playground
  replicas: 1
  template:
    spec:
      serviceAccountName: default-service-account
      containers:
      - image: gcr.io/substrateplayground-252112/jeluard/substrate-playground
        ports:
        - containerPort: 80
