conf/k8s/base/node-conf-daemon-set.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-conf
  labels:
    app.kubernetes.io/component: node-conf
spec:
  selector:
    matchLabels:
        app.kubernetes.io/component: node-conf
  template:
    metadata:
      labels:
        app.kubernetes.io/component: node-conf
      annotations:
        seccomp.security.alpha.kubernetes.io/defaultProfileName: runtime/default
        apparmor.security.beta.kubernetes.io/defaultProfileName: runtime/default
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: pause
          image: k8s.gcr.io/pause:3.5
          command:
            - /pause
          resources:
            requests:
              cpu: 100m
              memory: 90Mi
            limits:
              cpu: 100m
              memory: 90Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 65535
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      terminationGracePeriodSeconds: 5
