conf/k8s/base/prepull-templates.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: prepull-templates
spec:
  selector:
    matchLabels:
      name: prepull-templates
  template:
    metadata:
      labels:
        name: prepull-templates
    spec:
      volumes:
        - name: docker
          hostPath:
            path: /var/run
      containers:
        - name: pause
          image: gcr.io/google_containers/pause
