conf/k8s/base/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: server
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
      annotations:
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: default-service-account
      containers:
      - name: playground
        image: gcr.io/substrateplayground-252112/jeluard/substrate-playground-server
        ports:
        - containerPort: 80
