conf/k8s/base/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: ui
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: ui
    spec:
      containers:
      - name: playground
        image: gcr.io/substrateplayground-252112/jeluard/substrate-playground-ui
        ports:
        - containerPort: 80
