conf/k8s/base/backend-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
spec:
  type: NodePort
  ports:
  - name: api-port
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/component: backend-api
