conf/k8s/base/backend-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-deployment
  labels:
    app.kubernetes.io/component: backend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: backend-api
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backend-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      serviceAccountName: backend-service-account
      terminationGracePeriodSeconds: 0
      containers:
      - name: backend-api
        image: paritytech/substrate-playground-backend-api
        imagePullPolicy: IfNotPresent
        command: ["backend"]
        securityContext:
          privileged: false
          readOnlyRootFilesystem: true
          runAsUser: 10000
          runAsGroup: 10000
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "1Gi"
            cpu: "0.5"
          limits:
            memory: "2Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
spec:
  type: ClusterIP
  ports:
  - name: api-port
    port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/component: backend-api
