conf/k8s/base/backend-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-ui-deployment
  labels:
    app.kubernetes.io/component: backend-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: backend-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backend-ui
    spec:
      containers:
      - name: backend-ui
        image: paritytech/substrate-playground-backend-ui
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.125"
          limits:
            memory: "512Mi"
            cpu: "0.5"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: backend-ui-service
spec:
  type: ClusterIP
  ports:
  - name: ui-port
    port: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8080
  selector:
    app.kubernetes.io/component: backend-ui
