conf/k8s/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/component: server
