conf/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: deployment
