conf/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers 'Access-Control-Allow-credentials: true';
      more_set_headers 'Access-Control-Allow-Methods: PUT, GET, POST, PATCH, DELETE, OPTIONS';
      more_set_headers 'Access-Control-Allow-Origin: $http_origin';
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-ui-service
            port:
              name: ui-port
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: backend-api-service
            port:
              name: api-port
#      - path: /grafana/
#        pathType: Prefix
#        backend:
#          service:
#            name: grafana-service
#            port:
#              name: grafana-port
#---
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#  name: release-agent-egress-es
#spec:
#  podSelector:
#    matchLabels:
#      io.vamp: release-agent
#  policyTypes:
#  - Egress
#  egress:
#  - to:
#    - namespaceSelector:
#        matchLabels:
#          role: core
#    ports:
#    - protocol: TCP
#      port: 9200
